--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url= jdbc:mysql://localhost:3306/securitydb?useSSL=false&serve
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.redis.host=localhost
+spring.redis.port=6379
